--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,10 +25,7 @@ services:
     restart: always
 
   alts-celery:
-    image: alts-celery:latest
-    build:
-      dockerfile: Dockerfile.celery
-      context: ../alts
+    image: quay.io/almalinuxorg/alts-celery:latest
     environment:
       CELERY_CONFIG_PATH: "/celery_config.yaml"
       EXTERNAL_NETWORK: "albs-web-server_default"
@@ -50,10 +47,7 @@ services:
       - rabbitmq
 
   alts-scheduler:
-    image: alts-scheduler:latest
-    build:
-      dockerfile: Dockerfile.scheduler
-      context: ../alts
+    image: quay.io/almalinuxorg/alts-scheduler:latest
     ports:
       - "8082:8000"
     environment:
@@ -102,9 +96,6 @@ services:
     image: quay.io/almalinuxorg/task-queue:latest
     env_file:
       - vars.env
-    build:
-      dockerfile: Dockerfile.task-queue
-      context: .
     volumes:
       - "./alws:/code/alws"
       - "./tests:/code/tests"
@@ -126,9 +117,6 @@ services:
     image: quay.io/almalinuxorg/task-queue:latest
     env_file:
       - vars.env
-    build:
-      dockerfile: Dockerfile.task-queue
-      context: .
     volumes:
       - "./alws:/code/alws"
       - "./requirements.txt:/code/requirements.txt"
@@ -147,9 +135,6 @@ services:
     image: quay.io/almalinuxorg/task-queue:latest
     env_file:
       - vars.env
-    build:
-      dockerfile: Dockerfile.task-queue
-      context: .
     volumes:
       - "./alws:/code/alws"
       - "./requirements.txt:/code/requirements.txt"
@@ -168,9 +153,6 @@ services:
     image: quay.io/almalinuxorg/task-queue:latest
     env_file:
       - vars.env
-    build:
-      dockerfile: Dockerfile.task-queue
-      context: .
     volumes:
       - "./alws:/code/alws"
       - "./requirements.txt:/code/requirements.txt"
@@ -189,9 +171,6 @@ services:
     image: quay.io/almalinuxorg/task-queue:latest
     env_file:
       - vars.env
-    build:
-      dockerfile: Dockerfile.task-queue
-      context: .
     volumes:
       - "./alws:/code/alws"
       - "./requirements.txt:/code/requirements.txt"
@@ -205,9 +184,6 @@ services:
     image: quay.io/almalinuxorg/task-queue:latest
     env_file:
       - vars.env
-    build:
-      dockerfile: Dockerfile.task-queue
-      context: .
     volumes:
       - "./alws:/code/alws"
       - "./requirements.txt:/code/requirements.txt"
@@ -221,9 +197,6 @@ services:
     image: quay.io/almalinuxorg/task-queue:latest
     env_file:
       - vars.env
-    build:
-      dockerfile: Dockerfile.task-queue
-      context: .
     volumes:
       - "./alws:/code/alws"
       - "./requirements.txt:/code/requirements.txt"
@@ -279,7 +252,7 @@ services:
       - "../albs-sign-node/node-config:/home/alt/.config"
       - "~/.gnupg:/home/alt/.gnupg"
       - "../albs-sign-node/almalinux_sign_node.py:/sign-node/almalinux_sign_node.py"
-      - "../albs-sign-node:/sign-node/sign_node"
+      - "../albs-sign-node/sign_node:/sign-node/sign_node"
       - "../albs-sign-node/requirements.txt:/sign-node/requirements.txt"
     restart: on-failure
     command: "bash -c '/wait_for_it.sh web_server:8000 &&
@@ -347,6 +320,7 @@ services:
       - "../volumes/pulp/pulp_storage:/var/lib/pulp"
       - "../volumes/pulp/pgsql:/var/lib/pgsql"
       - "../volumes/pulp/containers:/var/lib/containers"
+      - "./pulp_init.sh:/usr/local/bin/pulp_init.sh"
     devices:
       - "/dev/fuse"
     restart: on-failure
@@ -382,6 +356,6 @@ services:
       - 3322:3322
       - 9497:9497
     volumes:
-      - "../volumes/immudb/data:/var/lib/immudb"
-      - "../volumes/immudb/config:/etc/immudb"
-      - "../volumes/immudb/logs:/var/log/immudb"
+      - "../volumes/immudb/data:/var/lib/immudb:Z"
+      - "../volumes/immudb/config:/etc/immudb:Z"
+      - "../volumes/immudb/logs:/var/log/immudb:Z"
