--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ split_on_trailing_comma = true
 [tool.black]
 line-length = 79
 skip-string-normalization = true
+preview = true
 
 [tool.pylint]
 max-line-length = 80
