--- a/reference_data/platforms.yaml
+++ b/reference_data/platforms.yaml
@@ -29,6 +29,9 @@
       - name: '8.8'
         version_prefix: '80800'
         dist_prefix: 'el8.8.0'
+      - name: '8.9'
+        version_prefix: '80900'
+        dist_prefix: 'el8.9.0'
   type: rpm
   arch_list:
     - i686
@@ -1726,6 +1729,9 @@
       - name: '9.2'
         version_prefix: '90200'
         dist_prefix: 'el9.2.0'
+      - name: '9.3'
+        version_prefix: '90300'
+        dist_prefix: 'el9.3.0'
   type: rpm
   arch_list:
     - i686
