Move the AlmaTestsCacher to the alma-tests-cacher repo

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -18,6 +18,8 @@ jobs:
           mkdir -p /home/runner/work/albs-web-server/albs-frontend
           mkdir -p /home/runner/work/albs-web-server/albs-node
           mkdir -p /home/runner/work/albs-web-server/albs-sign-node
+          mkdir -p /home/runner/work/albs-web-server/alma-tests-cacher
+          touch /home/runner/work/albs-web-server/alma-tests-cacher/vars.env
       - name: Add env file
         run: |
           touch ./vars.env
