Added log rotation for containers (https://github.com/AlmaLinux/build-system/issues/140)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,11 @@ services:
       - "5432:5432"
     volumes:
       - "../volumes/postgresql/data:/var/lib/postgresql/data"
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100Mb"
+        max-file: "3"
 
   rabbitmq:
     image: rabbitmq:3.8-management
@@ -23,6 +28,11 @@ services:
     env_file:
       - vars.env
     restart: always
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100Mb"
+        max-file: "3"
 
   alts-celery:
     image: alts-celery:latest
@@ -48,6 +58,11 @@ services:
       - ../alts/requirements:/tmp/requirements
     depends_on:
       - rabbitmq
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100Mb"
+        max-file: "3"
 
   alts-scheduler:
     image: alts-scheduler:latest
@@ -71,6 +86,11 @@ services:
       - ../alts/requirements:/tmp/requirements
     depends_on:
       - rabbitmq
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100Mb"
+        max-file: "3"
 
   web_server:
     image: quay.io/almalinuxorg/albs:latest
@@ -100,6 +120,11 @@ services:
     depends_on:
       - db
       - pulp
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100Mb"
+        max-file: "3"
 
   task_queue:
     image: quay.io/almalinuxorg/task-queue:latest
@@ -124,6 +149,11 @@ services:
       - db
       - pulp
       - rabbitmq
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100Mb"
+        max-file: "3"
 
   task_queue_builds:
     image: quay.io/almalinuxorg/task-queue:latest
@@ -145,6 +175,11 @@ services:
       - db
       - pulp
       - rabbitmq
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100Mb"
+        max-file: "3"
 
   task_queue_errata:
     image: quay.io/almalinuxorg/task-queue:latest
@@ -166,6 +201,11 @@ services:
       - db
       - pulp
       - rabbitmq
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100Mb"
+        max-file: "3"
 
   task_queue_releases:
     image: quay.io/almalinuxorg/task-queue:latest
@@ -187,6 +227,11 @@ services:
       - db
       - pulp
       - rabbitmq
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100Mb"
+        max-file: "3"
 
   task_queue_sign:
     image: quay.io/almalinuxorg/task-queue:latest
@@ -203,6 +248,11 @@ services:
                       pip3 install -r requirements.txt --no-cache-dir &&
                       dramatiq alws.dramatiq --processes 1 --threads 1 -Q sign'
     restart: on-failure
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100Mb"
+        max-file: "3"
 
   task_queue_product_modify:
     image: quay.io/almalinuxorg/task-queue:latest
@@ -219,6 +269,11 @@ services:
                       pip3 install -r requirements.txt --no-cache-dir &&
                       dramatiq alws.dramatiq --processes 3 --threads 1 -Q product_modify'
     restart: on-failure
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100Mb"
+        max-file: "3"
 
   task_queue_tests:
     image: quay.io/almalinuxorg/task-queue:latest
@@ -240,6 +295,11 @@ services:
       - db
       - pulp
       - rabbitmq
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100Mb"
+        max-file: "3"
 
   frontend:
     image: quay.io/almalinuxorg/albs-frontend:latest
@@ -255,6 +315,11 @@ services:
     restart: on-failure
     depends_on:
       - web_server
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100Mb"
+        max-file: "3"
 
   build_node:
     image: quay.io/almalinuxorg/albs-node:latest
@@ -278,6 +343,11 @@ services:
                        python3 almalinux_build_node.py -v -t 2'"
     depends_on:
       - web_server
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100Mb"
+        max-file: "3"
 
   sign_node:
     image: quay.io/almalinuxorg/albs-sign-node:latest
@@ -299,6 +369,11 @@ services:
                        pip3 install --upgrade pip &&
                        pip3 install -r requirements.txt --no-cache-dir &&
                        python3 almalinux_sign_node.py -v'"
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100Mb"
+        max-file: "3"
 
   gitea_listener:
     image: quay.io/almalinuxorg/gitea-listener:latest
@@ -317,6 +392,11 @@ services:
       - "./alws/scripts/git_cacher/git_cacher.py:/code/git_cacher.py"
       - "./alws:/code/alws"
       - "./alws/scripts/albs-gitea-listener/requirements.txt:/code/requirements.txt"
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100Mb"
+        max-file: "3"
 
   git_cacher:
     image: quay.io/almalinuxorg/git-cacher:latest
@@ -332,6 +412,11 @@ services:
       - "./alws:/code/alws"
       - "./alws/scripts/git_cacher/git_cacher.py:/code/git_cacher.py"
       - "./alws/scripts/git_cacher/requirements.txt:/code/requirements.txt"
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100Mb"
+        max-file: "3"
 
   tests_cacher:
     image: albs-tests-cacher:latest
@@ -351,6 +436,11 @@ services:
               pip3 install --upgrade pip &&
               pip3 install -r /code/requirements.txt --no-cache-dir &&
               python tests_cacher.py'"
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100Mb"
+        max-file: "3"
 
   pulp:
     # image: pulp/pulp
@@ -369,6 +459,11 @@ services:
     devices:
       - "/dev/fuse"
     restart: on-failure
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100Mb"
+        max-file: "3"
     #  echo "listen_addresses = '*'" >> /var/lib/pgsql/data/postgresql.conf &&
     #  echo "host all all 0.0.0.0/0 md5" >> /var/lib/pgsql/data/pg_hba.conf &&
     #  echo "host all all ::/0 md5" >> /var/lib/pgsql/data/pg_hba.conf &&
@@ -380,12 +475,22 @@ services:
       - "11883:1883"
     volumes:
       - "./mosquitto-no-auth.conf:/mosquitto/config/mosquitto.conf"
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100Mb"
+        max-file: "3"
 
   redis:
     image: redis
     ports:
       - 6379:6379
     restart: on-failure
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100Mb"
+        max-file: "3"
 
   nginx:
     image: nginx
@@ -396,6 +501,11 @@ services:
     depends_on:
       - web_server
       - frontend
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100Mb"
+        max-file: "3"
 
   immudb:
     image: codenotary/immudb:1.5
@@ -406,6 +516,12 @@ services:
       - "../volumes/immudb/data:/var/lib/immudb:Z"
       - "../volumes/immudb/config:/etc/immudb:Z"
       - "../volumes/immudb/logs:/var/log/immudb:Z"
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100Mb"
+        max-file: "3"
+
 
 volumes:
   frontend_node_modules:
