--- a/nginx_configs/albs.conf
+++ b/nginx_configs/albs.conf
@@ -70,6 +70,7 @@ server {
     }
 
     location /sign-file/ {
-        proxy_pass http://signfile/;
+        proxy_set_header Host $http_host;
+    	proxy_pass http://signfile/;
     }
 }
