Added log rotation for docker-compose (Patch from https://github.com/AlmaLinux/albs-web-server/pull/689)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,11 @@ services:
       - "5432:5432"
     volumes:
       - "../volumes/postgresql/data:/var/lib/postgresql/data"
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100Mb"
+        max-file: "3"
 
   rabbitmq:
     image: rabbitmq:3.8-management
@@ -23,6 +28,11 @@ services:
     env_file:
       - vars.env
     restart: always
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100Mb"
+        max-file: "3"
 
   alts-celery:
     image: alts-celery:latest
@@ -48,6 +58,11 @@ services:
       - ../alts/requirements:/tmp/requirements
     depends_on:
       - rabbitmq
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100Mb"
+        max-file: "3"
 
   alts-scheduler:
     image: alts-scheduler:latest
@@ -74,6 +89,11 @@ services:
     depends_on:
       - web_server
       - rabbitmq
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100Mb"
+        max-file: "3"
 
   web_server:
     image: quay.io/almalinuxorg/albs:latest
@@ -103,6 +123,11 @@ services:
     depends_on:
       - db
       - pulp
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100Mb"
+        max-file: "3"
 
   task_queue:
     image: quay.io/almalinuxorg/task-queue:latest
@@ -127,6 +152,11 @@ services:
       - db
       - pulp
       - rabbitmq
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100Mb"
+        max-file: "3"
 
   task_queue_builds:
     image: quay.io/almalinuxorg/task-queue:latest
@@ -148,6 +178,11 @@ services:
       - db
       - pulp
       - rabbitmq
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100Mb"
+        max-file: "3"
 
   task_queue_errata:
     image: quay.io/almalinuxorg/task-queue:latest
@@ -169,6 +204,11 @@ services:
       - db
       - pulp
       - rabbitmq
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100Mb"
+        max-file: "3"
 
   task_queue_releases:
     image: quay.io/almalinuxorg/task-queue:latest
@@ -190,6 +230,11 @@ services:
       - db
       - pulp
       - rabbitmq
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100Mb"
+        max-file: "3"
 
   task_queue_sign:
     image: quay.io/almalinuxorg/task-queue:latest
@@ -243,6 +288,11 @@ services:
       - db
       - pulp
       - rabbitmq
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100Mb"
+        max-file: "3"
 
   frontend:
     image: quay.io/almalinuxorg/albs-frontend:latest
@@ -258,6 +308,11 @@ services:
     restart: on-failure
     depends_on:
       - web_server
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100Mb"
+        max-file: "3"
 
   build_node:
     image: quay.io/almalinuxorg/albs-node:latest
@@ -281,6 +336,11 @@ services:
                        python3 almalinux_build_node.py -v -t 2'"
     depends_on:
       - web_server
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100Mb"
+        max-file: "3"
 
   sign_node:
     image: quay.io/almalinuxorg/albs-sign-node:latest
@@ -302,6 +362,11 @@ services:
                        pip3 install --upgrade pip &&
                        pip3 install -r requirements.txt --no-cache-dir &&
                        python3 almalinux_sign_node.py -v'"
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100Mb"
+        max-file: "3"
 
   gitea_listener:
     image: quay.io/almalinuxorg/gitea-listener:latest
@@ -320,6 +385,11 @@ services:
       - "./alws/scripts/git_cacher/git_cacher.py:/code/git_cacher.py"
       - "./alws:/code/alws"
       - "./alws/scripts/albs-gitea-listener/requirements.txt:/code/requirements.txt"
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100Mb"
+        max-file: "3"
 
   git_cacher:
     image: quay.io/almalinuxorg/git-cacher:latest
@@ -335,6 +405,11 @@ services:
       - "./alws:/code/alws"
       - "./alws/scripts/git_cacher/git_cacher.py:/code/git_cacher.py"
       - "./alws/scripts/git_cacher/requirements.txt:/code/requirements.txt"
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100Mb"
+        max-file: "3"
 
   tests_cacher:
     image: alma-tests-cacher:latest
@@ -354,7 +429,12 @@ services:
               source env/bin/activate &&
               pip3 install --upgrade pip &&
               pip3 install -r /code/requirements.txt --no-cache-dir &&
-              python alma_tests_cacher.py'"
+              python tests_cacher.py'"
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100Mb"
+        max-file: "3"
 
   pulp:
     # image: pulp/pulp
@@ -373,6 +453,11 @@ services:
     devices:
       - "/dev/fuse"
     restart: on-failure
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100Mb"
+        max-file: "3"
     #  echo "listen_addresses = '*'" >> /var/lib/pgsql/data/postgresql.conf &&
     #  echo "host all all 0.0.0.0/0 md5" >> /var/lib/pgsql/data/pg_hba.conf &&
     #  echo "host all all ::/0 md5" >> /var/lib/pgsql/data/pg_hba.conf &&
@@ -384,12 +469,22 @@ services:
       - "11883:1883"
     volumes:
       - "./mosquitto-no-auth.conf:/mosquitto/config/mosquitto.conf"
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100Mb"
+        max-file: "3"
 
   redis:
     image: redis
     ports:
       - 6379:6379
     restart: on-failure
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100Mb"
+        max-file: "3"
 
   sign_file:
     image: sign-file:latest
@@ -409,6 +504,11 @@ services:
       - ../albs-sign-file/db_manage.py:/app/db_manage.py
     ports:
       - "8083:8000"
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100Mb"
+        max-file: "3"
 
   nginx:
     image: nginx
@@ -420,6 +520,11 @@ services:
       - web_server
       - frontend
       - sign_file
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100Mb"
+        max-file: "3"
 
   immudb:
     image: codenotary/immudb:1.5
@@ -430,6 +535,11 @@ services:
       - "../volumes/immudb/data:/var/lib/immudb:Z"
       - "../volumes/immudb/config:/etc/immudb:Z"
       - "../volumes/immudb/logs:/var/log/immudb:Z"
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100Mb"
+        max-file: "3"
 
 volumes:
   frontend_node_modules:
