--- a/.github/workflows/syntax.yml
+++ b/.github/workflows/syntax.yml
@@ -25,7 +25,7 @@ jobs:
           source env/bin/activate
           pip install -U pip
           pip install -r requirements.txt
-          pip install isort[colors] black pylint
+          pip install isort[colors] colorama black pylint
       - name: Run pylint
         id: pylint
         if: ${{ steps.changed-files.outputs.all_changed_files }}
