--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -11,10 +11,17 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         name: Check out repository
         with:
           ref: ${{ github.event.pull_request.head.sha }}
+          fetch-depth: 0
+      - name: Rebase
+        run: |
+          git config --global user.email "action@users.noreply.github.com"
+          git config --global user.name "action"
+          git fetch origin master
+          git rebase origin/master
       - name: Create dirs and files
         run: |
           mkdir -p /home/runner/work/albs-web-server/alts
