--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -27,6 +27,8 @@ jobs:
         run: |
           touch ./vars.env
           echo ALTS_TOKEN="secret" >> ./vars.env
+          echo ALMALINUX_CLIENT="secret" >> ./vars.env
+          echo ALMALINUX_CLIENT_SECRET="secret" >> ./vars.env
           echo GITHUB_CLIENT="secret" >> ./vars.env
           echo GITHUB_CLIENT_SECRET="secret" >> ./vars.env
           echo POSTGRES_PASSWORD="password" >> ./vars.env
